--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+--- START OF FILE index.html ---
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -147,7 +149,7 @@
         let recognition, isRecording = false;
 
         const THUMB_UP_SVG = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z"></path></svg>`;
-        const THUMB_DOWN_SVG = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02 7.05c-.09.23-.14.47-.14-.73v1.91l.01.01L1 14c0 1.1.9 2 2 2h6.31l-.95 4.57-.03.32c0 .41.17-.79.44 1.06L9.83 23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2zm4 0v12h4V3h-4z"></path></svg>`;
+        const THUMB_DOWN_SVG = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02 7.05c-.09.23-.14.47-.14-.73v1.91l.01.01L1 14c0 1.1.9 2 2 2h6.31l-.95 4.57-.03.32c0 .41.17-.79-.44 1.06L9.83 23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2zm4 0v12h4V3h-4z"></path></svg>`;
         const BELL_SVG = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"></path></svg>`;
 
         function setAllIncomingAudio(enabled) { audioContainer.querySelectorAll('audio').forEach(audio => { audio.muted = !enabled; }); }
@@ -194,31 +196,34 @@
         function renderUsers(users) { const oldUsersJSON = JSON.stringify(allUsers.map(u => ({u: u.username, r: u.relationships}))); allUsers = users; const newUsersJSON = JSON.stringify(allUsers.map(u => ({u: u.username, r: u.relationships}))); if (oldUsersJSON !== newUsersJSON) { document.querySelectorAll('.relationship-icon').forEach(icon => updateRelationshipIcon(icon.dataset.partner)); updateAllVoiceConnections(); updateCallButtonVisibility(); } const currentUserData = allUsers.find(u => u.username === sessionUsername); const isActive = currentUserData && currentUserData.status === 'active'; isModerator = isActive && currentUserData.role === 'moderator'; ui.input.disabled = !isActive; ui.sendButton.disabled = !isActive; ui.micToTextBtn.disabled = !isActive; ui.input.placeholder = isActive ? "Wpisz wiadomość..." : "Zaloguj się, aby rozmawiać..."; if (storedUsername && !users.some(u => u.username === storedUsername)) { localStorage.removeItem('forumUsername'); localStorage.removeItem('forumPassword'); storedUsername = null; } if (storedUsername && isActive) { ui.newUserSlot.style.display = 'none'; ui.newUserSlot.innerHTML = ''; } else { ui.newUserSlot.style.display = 'block'; createRegistrationSlot(); } ui.userSlotsContainer.innerHTML = ''; const roleOrder = { 'moderator': 0, 'vip': 1, 'user': 2 }; users.sort((a, b) => (roleOrder[a.role] ?? 3) - (roleOrder[b.role] ?? 3) || a.username.localeCompare(b.username)) .forEach(user => { const isMyStoredIdentity = user.username === sessionUsername; const slot = document.createElement('div'); slot.className = `user-slot ${user.status === 'inactive' ? 'inactive' : ''}`; if (currentUserData && user.relationships && user.relationships[sessionUsername] === 'blocked') { slot.classList.add('blocked-by-user'); slot.title = 'Ten użytkownik Cię zablokował.'; } const header = document.createElement('div'); header.className = 'user-slot-header'; let roleIcon = ''; if (user.role === 'moderator') roleIcon = '👑 '; else if (user.role === 'vip') roleIcon = '⭐ '; if (user.status === 'inactive' && roleIcon) roleIcon = `<span class="inactive-icon">${roleIcon.trim()}</span> `; let nameHTML = roleIcon + user.username; let actionsHTML = ''; if (isMyStoredIdentity && isActive) { nameHTML += ' (Ty)'; const voiceIcon = isVoiceActive ? '🔊' : '🔈'; actionsHTML += `<button id="self-voice-toggle-btn" class="action-button voice-toggle-btn ${isVoiceActive ? 'active' : ''}" title="Włącz/wyłącz głos">${voiceIcon}</button>`; actionsHTML += `<button id="self-action-toggle-btn" class="action-button" title="Akcje konta">×</button>`; } else if (isModerator && user.username !== sessionUsername) { actionsHTML += `<button id="mod-action-toggle-btn-${user.username}" class="action-button" data-user="${user.username}" title="Akcje moderatora">×</button>`; } header.innerHTML = `<span class="user-name">${nameHTML}</span> ${actionsHTML}`; slot.appendChild(header); const nameElement = header.querySelector('.user-name'); if (isActive) { if (user.username !== sessionUsername) { nameElement.onclick = () => openPrivateChat(user.username); } else { nameElement.onclick = () => { if (lastPrivateChatPartner) { switchChat(lastPrivateChatPartner); } }; } } else { if (user.status === 'inactive') { nameElement.onclick = () => showLoginForm(slot, user.username, false); } else { nameElement.style.cursor = 'default'; } } const selfActionBtn = header.querySelector('#self-action-toggle-btn'); if (selfActionBtn) { selfActionBtn.onclick = (e) => { e.stopPropagation(); const existingMenu = slot.querySelector('.action-menu'); if (existingMenu) { existingMenu.remove(); selfActionBtn.classList.remove('active-danger'); } else { removeActiveForms(); showSelfActionMenu(slot, user.role !== 'user'); selfActionBtn.classList.add('active-danger'); } }; } const modActionBtn = header.querySelector(`#mod-action-toggle-btn-${user.username}`); if (modActionBtn) { modActionBtn.onclick = (e) => { e.stopPropagation(); const targetUsername = modActionBtn.dataset.user; const existingMenu = slot.querySelector('.action-menu'); if (existingMenu) { existingMenu.remove(); modActionBtn.classList.remove('active-danger'); } else { removeActiveForms(); showModeratorActionMenu(slot, targetUsername); modActionBtn.classList.add('active-danger'); } } } const selfVoiceBtn = header.querySelector('#self-voice-toggle-btn'); if(selfVoiceBtn) selfVoiceBtn.onclick = (e) => { e.stopPropagation(); toggleVoice(); }; ui.userSlotsContainer.appendChild(slot); }); updateClearHistoryButtonState(); }
         function resetSession() { if (isVoiceActive) toggleVoice(); Object.keys(peerConnections).forEach(cleanupVoiceChat); if(localStream) { localStream.getTracks().forEach(track => track.stop()); localStream = null; } sessionUsername = null; isModerator = false; ui.micToTextBtn.disabled = true; renderUsers(allUsers); switchChat('public'); }
         
-        // <<< POCZĄTEK NOWEJ LOGIKI AUTOMATYCZNEGO LOGOWANIA >>>
+        // <<< POCZĄTEK ZMODYFIKOWANEJ LOGIKI AUTOMATYCZNEGO LOGOWANIA Z KONSOLĄ >>>
         function handleAutoLoginOnStartup() {
             const urlParams = new URLSearchParams(window.location.search);
             if (urlParams.get('action') === 'answer_call') {
                 const storedUser = localStorage.getItem('forumUsername');
                 const storedPass = localStorage.getItem('forumPassword');
 
-                if (storedUser && storedPass !== null) { // Sprawdzamy czy hasło istnieje (nawet jako pusty string)
-                    console.log(`Próba automatycznego zalogowania jako ${storedUser}...`);
+                // Logowanie do konsoli w celu diagnozy
+                console.log("Wykryto akcję 'answer_call'. Sprawdzam dane logowania...");
+                console.log("Odczytany użytkownik:", storedUser);
+                console.log("Odczytane hasło:", storedPass);
+
+                if (storedUser && storedPass !== null) {
+                    console.log(`Wysyłanie prośby o automatyczne zalogowanie jako ${storedUser}...`);
                     socket.send(JSON.stringify({ type: 'join', payload: { username: storedUser, password: storedPass } }));
                 } else {
+                    console.error("Błąd automatycznego logowania: Brak nazwy użytkownika lub hasła w localStorage.");
                     alert("Nie znaleziono zapisanych danych logowania. Zaloguj się ręcznie i poproś o ponowne połączenie.");
                 }
             } else {
                 loadHistory();
             }
         }
-        // <<< KONIEC NOWEJ LOGIKI AUTOMATYCZNEGO LOGOWANIA >>>
+        // <<< KONIEC ZMODYFIKOWANEJ LOGIKI AUTOMATYCZNEGO LOGOWANIA Z KONSOLĄ >>>
         
         function connectWebSocket() {
             socket = new WebSocket(wsUrl);
-            socket.onopen = () => {
-                console.log('Połączono z WebSocket.');
-                handleAutoLoginOnStartup(); // Używamy nowej, czystej funkcji
-            };
+            socket.onopen = () => { console.log('Połączono z WebSocket.'); handleAutoLoginOnStartup(); };
             socket.onmessage = (event) => {
                 const data = JSON.parse(event.data);
                 switch(data.type) {
@@ -230,9 +235,7 @@
                     case 'private_history': const partner = data.payload.partner; const history = data.payload.history; const messagesDiv = document.getElementById(`messages-${partner}`); if (messagesDiv) { messagesDiv.innerHTML = ''; history.forEach(msg => addMessage(msg, partner)); } break;
                     case 'join_success':
                         sessionUsername = data.payload.username;
-                        // Zapisujemy tylko nazwę, hasło jest zapisywane przy ręcznym logowaniu
-                        if (!storedUsername || storedUsername !== sessionUsername) { localStorage.setItem('forumUsername', sessionUsername); }
-                        storedUsername = sessionUsername; // Aktualizuj zmienną w sesji
+                        storedUsername = sessionUsername;
                         removeActiveForms(); subscribeUserForPush();
                         const urlParams = new URLSearchParams(window.location.search);
                         if (urlParams.get('action') === 'answer_call' && urlParams.get('caller')) {
@@ -276,10 +279,8 @@
                 const uname = isNewUser ? form.querySelector('[name="username"]').value.trim() : targetUsername;
                 const pword = form.querySelector('[name="password"]').value.trim();
                 if (uname) {
-                    // <<< POCZĄTEK NOWEJ LOGIKI: Zapisujemy hasło dla funkcji autologowania >>>
                     localStorage.setItem('forumUsername', uname);
                     localStorage.setItem('forumPassword', pword);
-                    // <<< KONIEC NOWEJ LOGIKI >>>
                     socket.send(JSON.stringify({ type: 'join', payload: { username: uname, password: pword } }));
                     removeActiveForms();
                 }
