--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
             --text-color: #ffffff; --text-muted-color: #99aab5; --accent-color: #7289da;
             --private-msg-color: #f0b90c; --border-color: #444; --hover-color: #3a3e42;
             --notification-color: #198754; --danger-color: #dc3545; --voice-active-color: #43b581;
+            /* <<< NOWY KOLOR DLA SŁUCHAWKI >>> */
+            --idle-color: #808b96; /* Grafitowy/Szary */
             --sidebar-width: clamp(200px, 30vw, 240px); --transition-speed: 0.3s;
             --header-height: 52px;
         }
-        /* <<< NOWE ANIMACJE MIGANIA >>> */
-        @keyframes flash-green { 0%, 100% { background-color: var(--voice-active-color); box-shadow: 0 0 10px var(--voice-active-color); } 50% { background-color: transparent; box-shadow: none; } }
-        @keyframes flash-red { 0%, 100% { background-color: var(--danger-color); box-shadow: 0 0 10px var(--danger-color); } 50% { background-color: transparent; box-shadow: none; } }
+        /* <<< ZMODYFIKOWANE ANIMACJE MIGANIA >>> */
+        @keyframes pulse-green { 0%, 100% { color: var(--voice-active-color); text-shadow: 0 0 10px var(--voice-active-color); } 50% { color: var(--idle-color); text-shadow: none; } }
+        @keyframes pulse-red { 0%, 100% { color: var(--danger-color); text-shadow: 0 0 10px var(--danger-color); } 50% { color: var(--idle-color); text-shadow: none; } }
         
         @keyframes flash { 0%, 100% { background-color: var(--hover-color); } 50% { background-color: var(--notification-color); } }
         @keyframes pulse { 0% { box-shadow: 0 0 0 0 rgba(220, 53, 69, 0.7); } 70% { box-shadow: 0 0 0 10px rgba(220, 53, 69, 0); } 100% { box-shadow: 0 0 0 0 rgba(220, 53, 69, 0); } }
@@ -85,11 +87,11 @@
         #home-link { display: inline-flex; align-items: center; justify-content: center; color: var(--text-muted-color); text-decoration: none; border-radius: 50%; width: 34px; height: 34px; transition: background-color 0.2s, color 0.2s; flex-shrink: 0; }
         #home-link:hover { background-color: var(--hover-color); color: var(--text-color); }
         #home-link svg { width: 22px; height: 22px; }
-        #call-btn { display: none; background: none; border: none; color: var(--voice-active-color); padding: 5px; cursor: pointer; font-size: 1.5rem; border-radius: 50%; line-height: 1; transition: color 0.2s; margin-left: auto; width: 40px; height: 40px; }
+        /* <<< ZMODYFIKOWANE STYLE PRZYCISKU POŁĄCZENIA >>> */
+        #call-btn { display: none; background: none; border: none; color: var(--idle-color); padding: 5px; cursor: pointer; font-size: 1.5rem; border-radius: 50%; line-height: 1; transition: color 0.2s; margin-left: auto; width: 40px; height: 40px; }
         #call-btn:hover { filter: brightness(1.2); }
-        /* <<< NOWE KLASY WIZUALNE DLA POŁĄCZEŃ >>> */
-        #call-btn.calling { color: var(--danger-color); animation: flash-red 1.5s infinite; }
-        #call-btn.incoming-call { color: var(--voice-active-color); animation: flash-green 1.5s infinite; }
+        #call-btn.calling { animation: pulse-red 1.5s infinite; }
+        #call-btn.incoming-call { animation: pulse-green 1.5s infinite; }
     </style>
 </head>
 <body>
@@ -296,7 +298,11 @@
                         ui.callBtn.title = `Odbierz od ${caller}`;
                         addMessage({username:'System', message:`Połączenie przychodzące od ${caller}...`}, caller);
                         break;
-                    case 'call_initiated': addMessage({username:'System', message:`Dzwonienie do ${data.payload.recipient}...`}, activeChat); break;
+                    case 'call_initiated':
+                        ui.callBtn.classList.add('calling');
+                        ui.callBtn.title = "Anuluj dzwonienie";
+                        addMessage({username:'System', message:`Dzwonienie do ${data.payload.recipient}...`}, activeChat);
+                        break;
                     case 'call_answered':
                         resetCallButton();
                         ui.callBtn.classList.add('calling');
