--- a/call.html
+++ b/call.html
@@ -1,11 +1,13 @@
+--- START OF FILE call.html ---
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakty</title>
-    <!-- Link do manifestu, aby umożliwić "instalację" tej strony -->
-    <link rel="manifest" href="/manifest.json">
+    <!-- POPRAWKA: Usunięto ukośnik na początku ścieżki, aby działała na GitHub Pages -->
+    <link rel="manifest" href="manifest.json">
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <style>
         body { margin: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; background-color: #23272a; color: white; }
@@ -14,7 +16,7 @@
         
         #contacts-view header { background-color: #1e2124; padding: 15px; text-align: center; font-size: 1.2rem; font-weight: bold; display: flex; justify-content: space-between; align-items: center; }
         #contacts-view header a { color: #99aab5; text-decoration: none; font-size: 0.9rem; }
-        #install-button { background: none; border: none; color: white; font-size: 1.5rem; cursor: pointer; display: none; } /* Ukryty domyślnie */
+        #install-button { background: none; border: none; color: white; font-size: 1.5rem; cursor: pointer; display: none; }
         .contact-list { list-style-type: none; padding: 0; margin: 0; flex-grow: 1; overflow-y: auto; }
         .contact-item { display: flex; align-items: center; padding: 15px; border-bottom: 1px solid #444; }
         .contact-name { flex-grow: 1; font-size: 1.1rem; }
@@ -36,6 +38,7 @@
 
     <div id="contacts-view" class="view">
         <header>
+            <!-- POPRAWKA: Pełny, bezwzględny link do forum -->
             <a href="https://0-skar.github.io/3/">Przejdź do Forum</a>
             <span>Kontakty</span>
             <button id="install-button" title="Dodaj na pulpit">📌</button>
@@ -236,7 +239,6 @@
             }
         }
 
-        // --- Skrypt do obsługi przycisku "Przypnij do pulpitu" ---
         let deferredPrompt;
         const installButton = document.getElementById('install-button');
         window.addEventListener('beforeinstallprompt', (e) => {
