--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
         #home-link { display: inline-flex; align-items: center; justify-content: center; color: var(--text-muted-color); text-decoration: none; border-radius: 50%; width: 34px; height: 34px; transition: background-color 0.2s, color 0.2s; flex-shrink: 0; }
         #home-link:hover { background-color: var(--hover-color); color: var(--text-color); }
         #home-link svg { width: 22px; height: 22px; }
-        /* <<< ZMODYFIKOWANE STYLE PRZYCISKU POŁĄCZENIA >>> */
         #call-btn { display: none; background: none; border: none; color: var(--idle-color); padding: 5px; cursor: pointer; font-size: 1.5rem; border-radius: 50%; line-height: 1; transition: color 0.2s; margin-left: auto; width: 40px; height: 40px; }
         #call-btn:hover { filter: brightness(1.2); }
         #call-btn.calling { animation: pulse-red 1.5s infinite; }
@@ -253,18 +252,15 @@
         function renderUsers(users) { const oldUsersJSON = JSON.stringify(allUsers.map(u => ({u: u.username, r: u.relationships}))); allUsers = users; const newUsersJSON = JSON.stringify(allUsers.map(u => ({u: u.username, r: u.relationships}))); if (oldUsersJSON !== newUsersJSON) { document.querySelectorAll('.relationship-icon').forEach(icon => updateRelationshipIcon(icon.dataset.partner)); updateAllVoiceConnections(); updateCallButtonVisibility(); } const currentUserData = allUsers.find(u => u.username === sessionUsername); const isActive = currentUserData && currentUserData.status === 'active'; isModerator = isActive && currentUserData.role === 'moderator'; ui.input.disabled = !isActive; ui.sendButton.disabled = !isActive; ui.micToTextBtn.disabled = !isActive; ui.input.placeholder = isActive ? "Wpisz wiadomość..." : "Zaloguj się, aby rozmawiać..."; if (storedUsername && !users.some(u => u.username === storedUsername)) { localStorage.removeItem('forumUsername'); localStorage.removeItem('forumPassword'); storedUsername = null; } if (storedUsername && isActive) { ui.newUserSlot.style.display = 'none'; ui.newUserSlot.innerHTML = ''; } else { ui.newUserSlot.style.display = 'block'; createRegistrationSlot(); } ui.userSlotsContainer.innerHTML = ''; const roleOrder = { 'moderator': 0, 'vip': 1, 'user': 2 }; users.sort((a, b) => (roleOrder[a.role] ?? 3) - (roleOrder[b.role] ?? 3) || a.username.localeCompare(b.username)) .forEach(user => { const isMyStoredIdentity = user.username === sessionUsername; const slot = document.createElement('div'); slot.className = `user-slot ${user.status === 'inactive' ? 'inactive' : ''}`; if (currentUserData && user.relationships && user.relationships[sessionUsername] === 'blocked') { slot.classList.add('blocked-by-user'); slot.title = 'Ten użytkownik Cię zablokował.'; } const header = document.createElement('div'); header.className = 'user-slot-header'; let roleIcon = ''; if (user.role === 'moderator') roleIcon = '👑 '; else if (user.role === 'vip') roleIcon = '⭐ '; if (user.status === 'inactive' && roleIcon) roleIcon = `<span class="inactive-icon">${roleIcon.trim()}</span> `; let nameHTML = roleIcon + user.username; let actionsHTML = ''; if (isMyStoredIdentity && isActive) { nameHTML += ' (Ty)'; const voiceIcon = isVoiceActive ? '🔊' : '🔈'; actionsHTML += `<button id="self-voice-toggle-btn" class="action-button voice-toggle-btn ${isVoiceActive ? 'active' : ''}" title="Włącz/wyłącz głos">${voiceIcon}</button>`; actionsHTML += `<button id="self-action-toggle-btn" class="action-button" title="Akcje konta">×</button>`; } else if (isModerator && user.username !== sessionUsername) { actionsHTML += `<button id="mod-action-toggle-btn-${user.username}" class="action-button" data-user="${user.username}" title="Akcje moderatora">×</button>`; } header.innerHTML = `<span class="user-name">${nameHTML}</span> ${actionsHTML}`; slot.appendChild(header); const nameElement = header.querySelector('.user-name'); if (isActive) { if (user.username !== sessionUsername) { nameElement.onclick = () => openPrivateChat(user.username); } else { nameElement.onclick = () => { if (lastPrivateChatPartner) { switchChat(lastPrivateChatPartner); } }; } } else { if (user.status === 'inactive') { nameElement.onclick = () => showLoginForm(slot, user.username, false); } else { nameElement.style.cursor = 'default'; } } const selfActionBtn = header.querySelector('#self-action-toggle-btn'); if (selfActionBtn) { selfActionBtn.onclick = (e) => { e.stopPropagation(); const existingMenu = slot.querySelector('.action-menu'); if (existingMenu) { existingMenu.remove(); selfActionBtn.classList.remove('active-danger'); } else { removeActiveForms(); showSelfActionMenu(slot, user.role !== 'user'); selfActionBtn.classList.add('active-danger'); } }; } const modActionBtn = header.querySelector(`#mod-action-toggle-btn-${user.username}`); if (modActionBtn) { modActionBtn.onclick = (e) => { e.stopPropagation(); const targetUsername = modActionBtn.dataset.user; const existingMenu = slot.querySelector('.action-menu'); if (existingMenu) { existingMenu.remove(); modActionBtn.classList.remove('active-danger'); } else { removeActiveForms(); showModeratorActionMenu(slot, targetUsername); modActionBtn.classList.add('active-danger'); } } } const selfVoiceBtn = header.querySelector('#self-voice-toggle-btn'); if(selfVoiceBtn) selfVoiceBtn.onclick = (e) => { e.stopPropagation(); toggleVoice(); }; ui.userSlotsContainer.appendChild(slot); }); updateClearHistoryButtonState(); }
         function resetSession() { if (isVoiceActive) toggleVoice(); Object.keys(peerConnections).forEach(cleanupVoiceChat); if(localStream) { localStream.getTracks().forEach(track => track.stop()); localStream = null; } sessionUsername = null; isModerator = false; ui.micToTextBtn.disabled = true; renderUsers(allUsers); switchChat('public'); }
         
-        // --- KLUCZOWA ZMIANA DLA AUTO-LOGOWANIA ---
         function handleAutoLoginOnStartup() {
             const urlParams = new URLSearchParams(window.location.search);
-            // ZMIANA: Dodano warunek "autologin"
             if (urlParams.get('action') === 'answer_call' || urlParams.get('action') === 'autologin') {
                 const storedUser = localStorage.getItem('forumUsername');
                 const storedPass = localStorage.getItem('forumPassword');
                 if (storedUser && storedPass !== null) {
                     socket.send(JSON.stringify({ type: 'join', payload: { username: storedUser, password: storedPass } }));
                 } else {
-                    // Jeśli przyszliśmy z "mini-telefonu", ale nie mamy danych, po prostu załaduj historię
-                    if(urlParams.get('action') === 'autologin') {
+                    if (urlParams.get('action') === 'autologin') {
                         loadHistory();
                     } else {
                         alert("Nie znaleziono zapisanych danych logowania. Zaloguj się ręcznie i poproś o ponowne połączenie.");
@@ -288,45 +284,43 @@
                     case 'private_history_cleared': { const partner = data.payload.partner; const messagesDiv = document.getElementById(`messages-${partner}`); if (messagesDiv) { messagesDiv.innerHTML = ''; addMessage({username: 'System', message: 'Historia tej rozmowy została usunięta.'}, partner); } break; }
                     case 'private_history': const partner = data.payload.partner; const history = data.payload.history; const messagesDiv = document.getElementById(`messages-${partner}`); if (messagesDiv) { messagesDiv.innerHTML = ''; history.forEach(msg => addMessage(msg, partner)); } break;
                     case 'join_success':
-                        sessionUsername = data.payload.username; storedUsername = sessionUsername; removeActiveForms(); subscribeUserForPush();
+                        sessionUsername = data.payload.username;
+                        storedUsername = sessionUsername;
+                        removeActiveForms();
+                        subscribeUserForPush();
+                        
                         const urlParams = new URLSearchParams(window.location.search);
-                        // ZMIANA: Usunięto 'answer_call' z tego miejsca, jest obsługiwane przez ogólną logikę auto-logowania
-                        if (urlParams.get('caller')) {
-                            const caller = urlParams.get('caller'); window.history.replaceState({}, document.title, window.location.pathname); openPrivateChat(caller);
+                        const chatWith = urlParams.get('chat_with');
+                        const caller = urlParams.get('caller');
+
+                        if (chatWith) {
+                            openPrivateChat(chatWith);
+                            window.history.replaceState({}, document.title, window.location.pathname);
+                        } else if (urlParams.get('action') === 'answer_call' && caller) {
+                            openPrivateChat(caller);
                             socket.send(JSON.stringify({ type: 'call_answered', payload: { caller: caller } }));
                             if (!isVoiceActive) { toggleVoice(); }
-                        } else { if(!document.getElementById('messages-public').hasChildNodes()) loadHistory(); }
+                            window.history.replaceState({}, document.title, window.location.pathname);
+                        } else {
+                            if(!document.getElementById('messages-public').hasChildNodes()) {
+                                loadHistory();
+                            }
+                        }
                         break;
                     case 'join_failed': alert(`Logowanie nieudane: ${data.payload.reason}`); removeActiveForms(); renderUsers(allUsers); break;
                     case 'webrtc_signal': if (sessionUsername) handleWebRTCSignal(data.payload.sender, data.payload.signal); break;
                     case 'incoming_call_online':
-                        const caller = data.payload.caller;
-                        if (activeChat !== caller) { openPrivateChat(caller); }
-                        incomingCaller = caller;
+                        const incoming_caller = data.payload.caller;
+                        if (activeChat !== incoming_caller) { openPrivateChat(incoming_caller); }
+                        incomingCaller = incoming_caller;
                         ui.callBtn.classList.add('incoming-call');
-                        ui.callBtn.title = `Odbierz od ${caller}`;
-                        addMessage({username:'System', message:`Połączenie przychodzące od ${caller}...`}, caller);
+                        ui.callBtn.title = `Odbierz od ${incoming_caller}`;
+                        addMessage({username:'System', message:`Połączenie przychodzące od ${incoming_caller}...`}, incoming_caller);
                         break;
-                    case 'call_initiated':
-                        ui.callBtn.classList.add('calling');
-                        ui.callBtn.title = "Anuluj dzwonienie";
-                        addMessage({username:'System', message:`Dzwonienie do ${data.payload.recipient}...`}, activeChat);
-                        break;
-                    case 'call_answered':
-                        resetCallButton();
-                        ui.callBtn.classList.add('calling');
-                        ui.callBtn.title = "Zakończ rozmowę";
-                        addMessage({username:'System', message:`${data.payload.callee} odebrał(a) połączenie. Łączenie...`}, activeChat);
-                        if (!isVoiceActive) { toggleVoice(); } else { updateAllVoiceConnections(); }
-                        break;
-                    case 'call_declined':
-                        resetCallButton();
-                        addMessage({username:'System', message:`${data.payload.callee} odrzucił(a) połączenie.`}, activeChat);
-                        break;
-                    case 'recipient_busy':
-                        resetCallButton();
-                        addMessage({username:'System', message:`${data.payload.recipient} jest niedostępny lub odrzucił połączenie.`}, activeChat);
-                        break;
+                    case 'call_initiated': ui.callBtn.classList.add('calling'); ui.callBtn.title = "Anuluj dzwonienie"; addMessage({username:'System', message:`Dzwonienie do ${data.payload.recipient}...`}, activeChat); break;
+                    case 'call_answered': resetCallButton(); ui.callBtn.classList.add('calling'); ui.callBtn.title = "Zakończ rozmowę"; addMessage({username:'System', message:`${data.payload.callee} odebrał(a) połączenie. Łączenie...`}, activeChat); if (!isVoiceActive) { toggleVoice(); } else { updateAllVoiceConnections(); } break;
+                    case 'call_declined': resetCallButton(); addMessage({username:'System', message:`${data.payload.callee} odrzucił(a) połączenie.`}, activeChat); break;
+                    case 'recipient_busy': resetCallButton(); addMessage({username:'System', message:`${data.payload.recipient} jest niedostępny lub odrzucił połączenie.`}, activeChat); break;
                 }
             };
             socket.onclose = (e) => { console.log(`Rozłączono z kodem ${e.code}. Próbuję połączyć ponownie...`); if (e.code === 4001) { localStorage.removeItem('forumUsername'); localStorage.removeItem('forumPassword'); storedUsername = null; } resetSession(); setTimeout(connectWebSocket, 3000); };
