Change title and header from 'Forum' to 'Chat'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Forum z Głosem</title>
+    <title>Chat</title>
     <link rel="manifest" href="/manifest.json">
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <style>
@@ -114,7 +114,7 @@
                         <a href="https://0-skar.github.io/0/" id="home-link" title="Strona główna" target="_blank" rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12 5.69l5 4.5V18h-2v-6H9v6H7v-7.81l5-4.5M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"/></svg>
                         </a>
-                        <span id="header-title">Forum</span>
+                        <span id="header-title">Chat</span>
                     </div>
                     <div class="header-right-panel">
                         <span id="private-chat-indicator"></span>
