--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Chat z Głosem</title>
+    <title>Chat</title>
     <link rel="manifest" href="/manifest.json">
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <style>
